fix left-alignment and key error

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -3,6 +3,4 @@
   color: black;
 }
 
-.left-align-slick > .slick-list > .slick-track {    
-    margin-left:0;
-}
+.slick-track { margin-left:0; }
